v1.4.3 bugfix release (#72)
Fixed nodes not showing up in tooltips.

Fixed currency totals not showing up in tooltips.

On infusion, infused item now shows up in "Added".

Fix bugs with the new DisplayResults function (Now properly works for results of less than 50 and properly changes the dates around as well.)

Rewrote search to use a combination of the searchData function and the new DisplayResults function.

Reworked the quality function to work for class items, artifacts, and ghost shells, which do not upgrade their stats past 335.

Finalized quality rating for rise of iron.

Swap the old displayResults function for the new one.

Remove notices about quality.

--- a/app/ui.css
+++ b/app/ui.css
@@ -76,6 +76,10 @@ body {
 	padding-bottom:20px;
 }
 
+.title-bar.fixed + .center {
+	margin-top: 20px;
+}
+
 textarea {
 	overflow: auto;
 
@@ -1717,4 +1721,9 @@ optgroup option {
 	text-align: center;
 
 	background: #bfc5c6;
+}
+
+.fixed {
+	    position: absolute;
+    right: calc(50% - 386px);
 }
